Downgrade to Java 8 target for stock SageTV V9.x compatibility
- sourceCompatibility/targetCompatibility: Java 21 -> 1.8
- Replaced java.net.http.HttpClient with HttpURLConnection (Java 1.1)
- Replaced Path.of() with Paths.get() (Java 7)
- Replaced switch expressions with if-else chains (Java 8)
- Replaced var with explicit types (Java 8)
- Replaced InputStream.transferTo() with manual byte copy loop
- Removed java.time.Duration usage from HTTP client code

Plugin JAR now runs on both stock SageTV V9.x (Java 8) and
SageTV-mine (Java 21). Build toolchain still uses JDK 21.
All 27 tests passing.